@@ -1,3 +1,11 @@
+2004-11-04  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gstrfuncs.c (g_ascii_strtod): Handle numbers like
+	1e1, nan, -infinity. Also try harder to preserve errno.  
+	(#156421, Morten Welinder)
+
+	* tests/strtod-test.c: Add testcases.
+
 2004-11-04  Tor Lillqvist  <tml@iki.fi>
 
 	* glib/goption.h (enum GOptionFlags): Add G_OPTION_FLAG_REVERSE,
